# agent_engineering

./: README.md
agent-engineering-book/: .gitignore  HOW-TO-WORK-A-CLASS.md  Makefile  README.md  pyproject.toml
agent-engineering-book/book-1-foundations/: SETUP.md  manifest.yaml
agent-engineering-book/book-1-foundations/class-01-from-language-models-to-agents/: BUILD.md  README.md
agent-engineering-book/book-1-foundations/class-02-setting-up-the-claude-code-workspace/: BUILD.md  GRADING.md
agent-engineering-book/book-1-foundations/class-03-instruction-architecture-and-claude-md/: BUILD.md  CLAUDE.md  GRADING.md  README.md
agent-engineering-book/book-1-foundations/class-04-skills-and-reusable-capabilities/: CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-05-structured-outputs-and-data-contracts/: .gitignore  CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-06-tool-engineering/: CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-07-evidence-backed-agent-research/: CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-08-subagents-delegation-and-handoffs/: CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-09-workflow-orchestration-and-human-approval/: BUILD.md  CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-10-integrating-and-evaluating-the-mvp/: BUILD.md  CLAUDE.md  README.md
agent-engineering-book/book-1-foundations/class-11-loop-engineering-from-agent-runs-to-persistent-systems/: BUILD.md  CLAUDE.md  GRADING.md  README.md
agent-engineering-book/book-1-foundations/tests_shared/: README.md
agent-engineering-book/manuscript/: 01-front-matter.md
agent-engineering-book/manuscript/Gemini/: README.md
agent-engineering-book/manuscript/book-1-foundations/: 00-overview.md  ch01-from-language-models-to-agents.md  ch02-setting-up-the-claude-code-workspace.md  ch03-instruction-architecture-and-claude-md.md  ch04-skills-and-reusable-capabilities.md  ch06-tool-engineering.md  ch09-workflow-orchestration-and-human-approval.md  ch10-integrating-and-evaluating-the-mvp.md  ch11-loop-engineering-from-agent-runs-to-persistent-systems.md
agent-engineering-book/manuscript/book-2-advanced-architectures/: ch02-retrieval-augmented-generation-foundations.md
agent-engineering-book/manuscript/book-3-reliable-secure/: ch01-understanding-agent-failure.md  ch02-timeouts-retries-and-error-classification.md  (+6 more)
agent-engineering-book/scripts/: README.md  check_manifest.py  create_class.py  sync_shared_tests.py  verify_repository.py
agent-engineering-book/tests/: test_manifest.py
(+173 files in other folders)
