[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engineering-book"
version = "0.1.0"
description = "Agent Engineering book + Claude SDR Lab reference implementation — dev tooling only, no installable package."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Union of every per-class requirements-dev.txt, plus repo-level tooling.
# Per-class files stay in place for learner self-sufficiency (Class 02's
# folder still works copied out on its own); this is what "make verify"
# and CI actually install from, and per-class files are checked against it
# for drift (scripts/check_manifest.py / scripts/verify_repository.py).
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
# importlib import mode avoids sys.path-based module-name collisions —
# every built class carries its own copy of tests/ch02/test_environment.py
# by design (self-sufficient folders), so the default import mode fails
# collection the moment two classes exist. See item 3's write-up in
# HOW-TO-WORK-A-CLASS.md history / commit notes for why this isn't a
# workaround for a mistake, it's required by the folder-per-class design.
addopts = "--import-mode=importlib"

# tests_shared/ is canonical *source* for scripts/sync_shared_tests.py to
# copy from — it is not itself a runnable test suite. Its files resolve
# paths assuming they live inside a class-NN/tests/chNN/ folder (via
# parents[2]), which is only true once synced into an actual class. Without
# this exclusion, a full-repo `pytest` run "discovers" and fails these
# files directly, which is a false alarm, not a real bug.
norecursedirs = ["tests_shared", ".venv", "*.egg-info", "archive"]
